# forsyth

./: README.md  deploy.sh  forsyth-fable5-brief.md  wrangler.toml
.claude/: launch.json
cloud/: .env.example  docker-compose.yml
cloud/api/: Dockerfile  pyproject.toml
cloud/api/app/: accounts.py  auth.py  config.py  db.py  forecast.py  ingest.py  main.py  mqtt_bridge.py  query.py  reports.py  schema.sql  summary.py  worker.py
cloud/api/app/jobs/: backup.py  elevation.py  forecast.py  retention.py  timelapse.py  wunderground.py
cloud/api/tests/: test_api.py
cloud/caddy/: Caddyfile
cloud/dashboard/: admin.html  board.html  index.html  manifest.webmanifest  privacy.html  station.html  sw.js
cloud/dashboard/css/: board.css  dash.css
cloud/dashboard/js/: admin.js  board.js  common.js  map.js  report.js  station.js  theme.js  (+2 more)
cloud/docs/: deploy.md  engagement-roadmap.md  forecasting-whitepaper.md  hosting-options.md  insight-roadmap.md  map-roadmap.md
cloud/mosquitto/: mosquitto.conf
cloud/simulator/: Dockerfile  sim.py  skycam.py  weather.py
firmware/: PROTOCOL.md  README.md
firmware/coordinator/: README.md  install.sh  provision.sh
firmware/leaf/: .gitignore  Makefile  README.md  platformio.ini
hardware/: BOM.md  architecture.md
hardware/boards/: README.md  board-a-core.md  board-b-environment.md  board-d-wind.md
hardware/cad/: README.md
hardware/enclosures/: README.md
hardware/fab/: README.md
research/: competitive-landscape.md
site/: _headers  _redirects  index.html  styles.css
tools/: gen_favicons.py  gen_site_images.py
(+39 files in other folders)
